--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -204,7 +204,7 @@ import PortfolioPreview from "../components/PortfolioPreview/index.jsx";
 					<span class="role">😌 Gatekeeper <span class="invert">😌 Gatekeeper</span></span>&nbsp;
 					<span class="role">👸🏼 Girlboss <span class="invert">👸🏼 Girlboss</span></span>
 				</div>
-				<p class="desc">Lover of out of date Mighty Boosh references.</p>
+				<p class="desc">Lover of gaslighting, gatekeeping and being a girlboss 😤</p>
 			</div>
 		</header>
 		<main class="wrapper mt4 mb4">
