--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,19 +1,17 @@
 ---
-import MainHead from "../components/MainHead.astro";
-import Footer from "../components/Footer/index.jsx";
-import Nav from "../components/Nav/index.jsx";
+import RecentBlogPosts from '@components/generic/RecentBlogPosts.astro';
+import Layout from '@layouts/Default.astro';
+import ErrorPage from '@components/errors/404.astro';
 ---
 
-<html lang="en">
-	<head>
-		<MainHead title="Not Found" />
-	</head>
-	<body>
-		<Nav />
-		<div class="wrapper mt4 mb4">
-			<h1>Page Not Found</h1>
-			<p>Not found</p>
-		</div>
-		<footer></footer>
-	</body>
-</html>
+<Layout
+  title='Page Not Found'
+  description='Page not found'
+  classList='h-full'
+  pageTitle='Page Not Found!'
+>
+  <main class='bg-blue px-6 py-24'>
+    <ErrorPage />
+    <RecentBlogPosts />
+  </main>
+</Layout>
